"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2008-02-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-08:
	  Implemented random sources (channel-rsource), untested. 
	  Texinfo-documented all channel commands.  


2008-02-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-07:
	  Ironed out most initial bugs for channel commands, now works!
		Call it beta.
	  Now advance value in sequence *after* data rails are reset.
		Resume no longer auto-advances.
	  Fixed exception throw specifier for State::step,cycle, 
		which otherwise, prevented channel_exception from
		being caught (channel value assert-fail).
	  Added bunch of source/sink/log/expect test cases.


	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-06:
	  channel::resume() now properly spawns events from the environment
		of sources and sink.
	  Channel sink initial tests are working.
	  Added test case with manual toggling of data rails.


2008-02-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-05:
	  Continued development of prsim:channels, mostly implementation
		of source/sink commands, and interactions with 
		the simulator state's events. 
	  State::excl_exception now derived from common base step_exception
		to support different exception types. 
	  Cleaned up previous patch #if's.
	  Still untested.


	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-04:
	  prsim/Channel-prsim.{h,cc}: use packed 2D array structure
		instead of vector-of-vector, cleaner and faster.
		Started to implement channel::process_node.


2008-02-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-03:
	  Slight redesign of prsim::channel structure, allowing for
		concurrent non-conflicting modes of operation.