@@ -5,6 +5,12 @@
 
 2008-02-19	David Fang		<fangism@users.sourceforge.net>
 
+	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-09:
+	  Failed attempt to fix compile-option-forwarding (-C "...")
+		attributed to getopt() being non-reentrant.  
+		What a load of crap.  
+
+
 	* HACKT-00-01-04-main-00-82-02-ACT-03-38-prsim-09-08:
 	  Implemented random sources (channel-rsource), untested. 
 	  Texinfo-documented all channel commands.  
